# nautilus-annotations

./: .editorconfig  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  bootstrap-ubuntu-2204.sh  configure.ac  package.json
docs/: shortcuts.md  styling.md
extension-data/: style.css
noinst/css-lab/: dark-theme.css  postit-theme.css
po/: LINGUAS  Makevars  POTFILES.in  it.po  nl.po
src/: Makefile.am  nautilus-annotations.c
src/emblem-picker/: gnui-definitions.h  gnui-emblem-picker.c  gnui-emblem-picker.h  gnui-internals.h  style.css
src/resources/: nautilus-annotations.gresources.xml  style.css
src/resources/emblem-picker/: style.css
themes/: README.md  black-glass-theme.css  dark-theme.css  fallback-theme.css  no-theme.css  notebook-double-margin-theme.css  notebook-theme.css  post-it-theme.css
