# Process this file with automake to produce Makefile.in


ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	src

dist_doc_DATA = \
	AUTHORS \
	COPYING \
	ChangeLog \
	NEWS \
	README \
	docs/shortcuts.md \
	docs/styling.md

dist_pkgdata_DATA = \
	extension-data/style.css

# Launch
#
#     echo "nobase_dist_data_DATA =$(find icons -type f -printf ' \\\n\t%p')"
#
# to get this list
nobase_dist_data_DATA = \
	icons/Adwaita/64x64/actions/unannotate-symbolic.png \
	icons/Adwaita/64x64/actions/annotate-symbolic.png \
	icons/Adwaita/64x64/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/64x64/emblems/emblem-annotations.png \
	icons/Adwaita/24x24/actions/unannotate-symbolic.png \
	icons/Adwaita/24x24/actions/annotate-symbolic.png \
	icons/Adwaita/24x24/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/24x24/emblems/emblem-annotations.png \
	icons/Adwaita/48x48/actions/unannotate-symbolic.png \
	icons/Adwaita/48x48/actions/annotate-symbolic.png \
	icons/Adwaita/48x48/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/48x48/emblems/emblem-annotations.png \
	icons/Adwaita/96x96/actions/unannotate-symbolic.png \
	icons/Adwaita/96x96/actions/annotate-symbolic.png \
	icons/Adwaita/96x96/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/96x96/emblems/emblem-annotations.png \
	icons/Adwaita/scalable/actions/annotate-symbolic.svg \
	icons/Adwaita/scalable/actions/unannotate-symbolic.svg \
	icons/Adwaita/scalable/emblems/emblem-annotations-symbolic.svg \
	icons/Adwaita/scalable/emblems/emblem-annotations.svg \
	icons/Adwaita/22x22/actions/unannotate-symbolic.png \
	icons/Adwaita/22x22/actions/annotate-symbolic.png \
	icons/Adwaita/22x22/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/22x22/emblems/emblem-annotations.png \
	icons/Adwaita/256x256/actions/unannotate-symbolic.png \
	icons/Adwaita/256x256/actions/annotate-symbolic.png \
	icons/Adwaita/256x256/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/256x256/emblems/emblem-annotations.png \
	icons/Adwaita/8x8/actions/unannotate-symbolic.png \
	icons/Adwaita/8x8/actions/annotate-symbolic.png \
	icons/Adwaita/8x8/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/8x8/emblems/emblem-annotations.png \
	icons/Adwaita/16x16/actions/unannotate-symbolic.png \
	icons/Adwaita/16x16/actions/annotate-symbolic.png \
	icons/Adwaita/16x16/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/16x16/emblems/emblem-annotations.png \
	icons/Adwaita/32x32/actions/unannotate-symbolic.png \
	icons/Adwaita/32x32/actions/annotate-symbolic.png \
	icons/Adwaita/32x32/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/32x32/emblems/emblem-annotations.png \
	icons/Adwaita/512x512/actions/unannotate-symbolic.png \
	icons/Adwaita/512x512/actions/annotate-symbolic.png \
	icons/Adwaita/512x512/emblems/emblem-annotations-symbolic.png \
	icons/Adwaita/512x512/emblems/emblem-annotations.png \
	icons/hicolor/64x64/actions/unannotate-symbolic.png \
	icons/hicolor/64x64/actions/annotate-symbolic.png \
	icons/hicolor/64x64/actions/annotate.png \
	icons/hicolor/64x64/actions/unannotate.png \
	icons/hicolor/64x64/emblems/emblem-annotations.png \
	icons/hicolor/24x24/actions/unannotate-symbolic.png \
	icons/hicolor/24x24/actions/annotate-symbolic.png \
	icons/hicolor/24x24/actions/annotate.png \
	icons/hicolor/24x24/actions/unannotate.png \
	icons/hicolor/24x24/emblems/emblem-annotations.png \
	icons/hicolor/48x48/actions/unannotate-symbolic.png \
	icons/hicolor/48x48/actions/annotate-symbolic.png \
	icons/hicolor/48x48/actions/annotate.png \
	icons/hicolor/48x48/actions/unannotate.png \
	icons/hicolor/48x48/emblems/emblem-annotations.png \
	icons/hicolor/96x96/actions/unannotate-symbolic.png \
	icons/hicolor/96x96/actions/annotate-symbolic.png \
	icons/hicolor/96x96/actions/annotate.png \
	icons/hicolor/96x96/actions/unannotate.png \
	icons/hicolor/96x96/emblems/emblem-annotations.png \
	icons/hicolor/scalable/actions/annotate-symbolic.svg \
	icons/hicolor/scalable/actions/unannotate-symbolic.svg \
	icons/hicolor/scalable/actions/annotate.svg \
	icons/hicolor/scalable/actions/unannotate.svg \
	icons/hicolor/scalable/emblems/emblem-annotations.svg \
	icons/hicolor/22x22/actions/unannotate-symbolic.png \
	icons/hicolor/22x22/actions/annotate-symbolic.png \
	icons/hicolor/22x22/actions/annotate.png \
	icons/hicolor/22x22/actions/unannotate.png \
	icons/hicolor/22x22/emblems/emblem-annotations.png \
	icons/hicolor/256x256/actions/unannotate-symbolic.png \
	icons/hicolor/256x256/actions/annotate-symbolic.png \
	icons/hicolor/256x256/actions/annotate.png \
	icons/hicolor/256x256/actions/unannotate.png \
	icons/hicolor/256x256/emblems/emblem-annotations.png \
	icons/hicolor/8x8/actions/unannotate-symbolic.png \
	icons/hicolor/8x8/actions/annotate-symbolic.png \
	icons/hicolor/8x8/actions/annotate.png \
	icons/hicolor/8x8/actions/unannotate.png \
	icons/hicolor/8x8/emblems/emblem-annotations.png \
	icons/hicolor/16x16/actions/unannotate-symbolic.png \
	icons/hicolor/16x16/actions/annotate-symbolic.png \
	icons/hicolor/16x16/actions/annotate.png \
	icons/hicolor/16x16/actions/unannotate.png \
	icons/hicolor/16x16/emblems/emblem-annotations.png \
	icons/hicolor/32x32/actions/unannotate-symbolic.png \
	icons/hicolor/32x32/actions/annotate-symbolic.png \
	icons/hicolor/32x32/actions/annotate.png \
	icons/hicolor/32x32/actions/unannotate.png \
	icons/hicolor/32x32/emblems/emblem-annotations.png \
	icons/hicolor/512x512/actions/unannotate-symbolic.png \
	icons/hicolor/512x512/actions/annotate-symbolic.png \
	icons/hicolor/512x512/actions/annotate.png \
	icons/hicolor/512x512/actions/unannotate.png \
	icons/hicolor/512x512/emblems/emblem-annotations.png

INTLTOOL_FILES = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

EXTRA_DIST = \
	ChangeLog.md \
	INSTALL \
	NEWS \
	README.md \
	bootstrap \
	package.json \
	noinst \
	.editorconfig \
	$(INTLTOOL_FILES)

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update \
	po/.intltool-merge-cache


# Shell expansion is supported here
_distclean_dirs_ = \
	'po/backups'


if NLS_ENABLED

SUBDIRS += \
	po

else !NLS_ENABLED

EXTRA_DIST += \
	po

endif !NLS_ENABLED


# Remove `doc` and `pkgdatadir` on uninstall
uninstall-local:
	-rm -r '$(DESTDIR)$(docdir)' '$(DESTDIR)$(pkgdatadir)'


distclean-local:
	-rm -rf $(_distclean_dirs_);


# Update translations
.PHONY: i18n-update
i18n-update:
	(cd 'po' && intltool-update -p --gettext-package='$(PACKAGE_TARNAME)' \
	&& mkdir -p 'backups' && grep -o '^\s*\w\S\+' 'LINGUAS' | while read \
	coin; do mv "$${coin}.po" "$${coin}.po.bak" && msgmerge \
	"$${coin}.po.bak" '$(PACKAGE_TARNAME).pot' > "$${coin}.po" && mv \
	"$${coin}.po.bak" 'backups' && sed -i \
	's/"Project-Id-Version:\s*\([0-9]\+\(\.[0-9]\+\(\.[0-9]\)\?\)\?\)\?\+\\n"/"Project-Id-Version: @PACKAGE_VERSION@\\n"/' \
	"$${coin}.po"; done; rm '$(PACKAGE_TARNAME).pot')


# EOF

